--- a/class/regex_tutorial.ipynb
+++ b/class/regex_tutorial.ipynb
@@ -1,12 +1,627 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:3: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:3: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\2207076392.py:3: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  pattern = 'order[^\\d]*(\\d*)'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['412889912']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat1='codebasics: Hello, I am having an issue with my order # 412889912'\n",
+    "\n",
+    "pattern = 'order[^\\d]*(\\d*)'\n",
+    "matches = re.findall(pattern, chat1)\n",
+    "matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\2125409380.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  pattern = 'order[^\\d]*(\\d*)'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['412889912']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat2='codebasics: I have a problem with my order number 412889912'\n",
+    "pattern = 'order[^\\d]*(\\d*)'\n",
+    "matches = re.findall(pattern, chat2)\n",
+    "matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\3316829242.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  pattern = 'order[^\\d]*(\\d*)'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['412889912']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat3='codebasics: My order 412889912 is having an issue, I was charged 300$ when online it says 280$'\n",
+    "pattern = 'order[^\\d]*(\\d*)'\n",
+    "matches = re.findall(pattern, chat3)\n",
+    "matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_pattern_match(pattern, text):\n",
+    "    matches = re.findall(pattern, text)\n",
+    "    if matches:\n",
+    "        return matches[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\1612910112.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  get_pattern_match('order[^\\d]*(\\d*)', chat1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'412889912'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match('order[^\\d]*(\\d*)', chat1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieve email id and phone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\1612910112.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  get_pattern_match('order[^\\d]*(\\d*)', chat1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'412889912'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match('order[^\\d]*(\\d*)', chat1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat1 = 'codebasics: you ask lot of questions 😠  1235678912, abc@xyz.com'\n",
+    "chat2 = 'codebasics: here it is: (123)-567-8912, abc@xyz.com'\n",
+    "chat3 = 'codebasics: yes, phone: 1235678912 email: abc@xyz.com'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ---Email ID---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\2536982304.py:1: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  get_pattern_match('[a-zA-Z0-9_]*@[a-z]*\\.[a-zA-Z0-9]*',chat1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'abc@xyz.com'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match('[a-zA-Z0-9_]*@[a-z]*\\.[a-zA-Z0-9]*',chat1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\3553579369.py:1: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  get_pattern_match('[a-zA-Z0-9_]*@[a-z]*\\.[a-zA-Z0-9]*',chat2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'abc@xyz.com'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match('[a-zA-Z0-9_]*@[a-z]*\\.[a-zA-Z0-9]*',chat2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\2716949903.py:1: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  get_pattern_match('[a-zA-Z0-9_]*@[a-z]*\\.[a-zA-Z0-9]*',chat3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'abc@xyz.com'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match('[a-zA-Z0-9_]*@[a-z]*\\.[a-zA-Z0-9]*',chat3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### -----Phone number-----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\632513232.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  get_pattern_match('(\\d{10})|(\\(\\d{3}\\)-\\d{3}-\\d{4})',chat1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('1235678912', '')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match('(\\d{10})|(\\(\\d{3}\\)-\\d{3}-\\d{4})',chat1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('', '(123)-567-8912')"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match(r'(\\d{10})|(\\(\\d{3}\\)-\\d{3}-\\d{4})', chat2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('1235678912', '')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match(r'(\\d{10})|(\\(\\d{3}\\)-\\d{3}-\\d{4})', chat3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (2) Regex for Information Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text='''\n",
+    "Born\tElon Reeve Musk\n",
+    "June 28, 1971 (age 50)\n",
+    "Pretoria, Transvaal, South Africa\n",
+    "Citizenship\t\n",
+    "South Africa (1971–present)\n",
+    "Canada (1971–present)\n",
+    "United States (2002–present)\n",
+    "Education\tUniversity of Pennsylvania (BS, BA)\n",
+    "Title\t\n",
+    "Founder, CEO and Chief Engineer of SpaceX\n",
+    "CEO and product architect of Tesla, Inc.\n",
+    "Founder of The Boring Company and X.com (now part of PayPal)\n",
+    "Co-founder of Neuralink, OpenAI, and Zip2\n",
+    "Spouse(s)\t\n",
+    "Justine Wilson\n",
+    "​\n",
+    "​(m. 2000; div. 2008)​\n",
+    "Talulah Riley\n",
+    "​\n",
+    "​(m. 2010; div. 2012)​\n",
+    "​\n",
+    "​(m. 2013; div. 2016)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'50'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match(r'age (\\d+)', text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Elon Reeve Musk'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match(r'Born(.*)\\n', text).strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'June 28, 1971'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match(r'Born.*\\n(.*)\\(age', text).strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pretoria, Transvaal, South Africa'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_pattern_match(r'\\(age.*\\n(.*)', text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\('\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\('\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\('\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\3783779278.py:2: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  age = get_pattern_match('age (\\d+)', text)\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\3783779278.py:4: SyntaxWarning: invalid escape sequence '\\('\n",
+      "  birth_date = get_pattern_match('Born.*\\n(.*)\\(age', text)\n",
+      "C:\\Users\\phrod\\AppData\\Local\\Temp\\ipykernel_17516\\3783779278.py:5: SyntaxWarning: invalid escape sequence '\\('\n",
+      "  birth_place = get_pattern_match('\\(age.*\\n(.*)', text)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def extract_personal_information(text):\n",
+    "    age = get_pattern_match('age (\\d+)', text)\n",
+    "    full_name = get_pattern_match('Born(.*)\\n', text)\n",
+    "    birth_date = get_pattern_match('Born.*\\n(.*)\\(age', text)\n",
+    "    birth_place = get_pattern_match('\\(age.*\\n(.*)', text)\n",
+    "    return {\n",
+    "        'age': int(age),\n",
+    "        'name': full_name.strip(),\n",
+    "        'birth_date': birth_date.strip(),\n",
+    "        'birth_place': birth_place.strip()\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'age': 50,\n",
+       " 'name': 'Elon Reeve Musk',\n",
+       " 'birth_date': 'June 28, 1971',\n",
+       " 'birth_place': 'Pretoria, Transvaal, South Africa'}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_personal_information(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = '''\n",
+    "Born\tMukesh Dhirubhai Ambani\n",
+    "19 April 1957 (age 64)\n",
+    "Aden, Colony of Aden\n",
+    "(present-day Yemen)[1][2]\n",
+    "Nationality\tIndian\n",
+    "Alma mater\t\n",
+    "St. Xavier's College, Mumbai\n",
+    "Institute of Chemical Technology (B.E.)\n",
+    "Stanford University (drop-out)\n",
+    "Occupation\tChairman and MD, Reliance Industries\n",
+    "Spouse(s)\tNita Ambani ​(m. 1985)​[3]\n",
+    "Children\t3\n",
+    "Parent(s)\t\n",
+    "Dhirubhai Ambani (father)\n",
+    "Kokilaben Ambani (mother)\n",
+    "Relatives\tAnil Ambani (brother)\n",
+    "Tina Ambani (sister-in-law)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'age': 64,\n",
+       " 'name': 'Mukesh Dhirubhai Ambani',\n",
+       " 'birth_date': '19 April 1957',\n",
+       " 'birth_place': 'Aden, Colony of Aden'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_personal_information(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "codebasics: https://www.youtube.com/watch?v=sHw5hLYFaIw"
    ]
   }
  ],
